# braincoder

./: .gitignore  CITATION.cff  CLAUDE.md  DEVELOPMENT.md  MANIFEST.in  README.md  README.rst  environment.yml  pyproject.toml  setup.py
.github/workflows/: tests.yml
braincoder/: __init__.py  barstimuli.py  basis_functions.py  decode_prf.py  decoders.py  estimators.py  generators.py  hrf.py  models.py  optimize.py  stimuli.py  utils.py  version.py
braincoder/data/szinte2024/: dm_gazecenter.npz  gauss_parameters.tsv  grid_coordinates.tsv
braincoder/models/: __init__.py  base.py  linear.py  prf_1d.py  prf_2d.py
braincoder/optimize/: __init__.py  parameter_fitter.py  residual_fitter.py  stimulus_fitter.py  weight_fitter.py
braincoder/tests/: test_gaussprf.py  test_glm_t_dist.py
braincoder/tests/logs/fit/20210219-120219/: events.out.tfevents.1613736139.30c5deaebba2.401.57.v2
braincoder/tests/logs/fit/20210219-120226/: events.out.tfevents.1613736146.30c5deaebba2.455.57.v2
braincoder/tests/logs/fit/20210219-120240/: events.out.tfevents.1613736160.30c5deaebba2.509.57.v2
braincoder/tests/logs/fit/20210219-120329/: events.out.tfevents.1613736209.30c5deaebba2.563.57.v2
braincoder/tests/logs/fit/20210219-120359/: events.out.tfevents.1613736239.30c5deaebba2.622.57.v2
braincoder/utils/: __init__.py  backend.py  data.py  formatting.py  math.py  mcmc.py  stats.py  visualize.py
docs/: api_reference.rst  bibliography.rst  concepts.rst  conf.py  index.rst  installation.rst  quickstart.md  references.bib
docs/auto_examples/00_encodingdecoding/: plot_test.py
docs/tutorial/: index.rst  lesson1.rst  lesson2.rst  lesson3.rst  lesson4.rst  lesson5.rst  lesson6.rst  lesson7.rst
examples/: README.txt  masked_stimulus_decoding.ipynb
examples/00_encodingdecoding/: README.txt  decode.py  decode2d.py  decode_v1.py  decode_visual.py  encoding_model.py  fisher_information.ipynb  fisher_information.py  fit_prf.ipynb  fit_prf.py  fit_residuals.py  invert_model.py  linear_encoding_model.py  masked_stimulus_decoding.py  test.py
notebooks/: CombinedModel.ipynb  Fit 2D Gaussian PRF.ipynb  Fit 2dPointPRF.ipynb  Gaussian PRF demo.ipynb  GazeCenterFS_vd.mat  check_hrf.ipynb  debug_tomas.ipynb  mcmc_transformed_spaces.ipynb  test_hrf_deriv_fit.ipynb  test_hrf_fit.ipynb  test_regression_decode.ipynb
tests/: test_decoders.py  test_gauss_rf.py  test_gauss_to_stick.py  test_generators.py  test_glm.py  test_glm_t_dist.py  test_hrf.py  test_identitymodel.py  test_models.py  test_models_extended.py  test_stickmodel.py  test_stimuli.py  test_subtract_wt_baseline.py  test_utils.py
(+6 files in other folders)
