[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "braincoder"
version = "0.2.0"
description = "A modern neuroimaging modeling package"
authors = [
    {name = "Gilles de Hollander", email = "gilles.dehollander@gmail.com"}
]
requires-python = ">=3.10"
dependencies = [
    "numpy",
    "keras>=3.0",
    "matplotlib",
    "seaborn",
    "pandas",
    "pandas_flavor",
    "scipy",
    "tqdm",
    "patsy",
]
readme = "README.rst"
license = "MIT"

[project.optional-dependencies]
test = [
    "pytest",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["braincoder*"]
exclude = ["notebooks*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = [
    "--ignore=tests/test_gauss_rf.py",
    "--ignore=tests/test_gauss_to_stick.py",
    "--ignore=tests/test_glm.py",
    "--ignore=tests/test_glm_t_dist.py",
    "--ignore=tests/test_stickmodel.py",
]